feat: add network view
